--- a/JPI_convert_to_Rcode/src/JPI_LAD_designation_working.Rmd
+++ b/JPI_convert_to_Rcode/src/JPI_LAD_designation_working.Rmd
@@ -8,7 +8,7 @@ Objective: This markdown is focused on designating run assignment using Length-a
 
 Data sources:
 
--   CBR shared file: lengthcriteriariver.csv renamed run_designation_cbr.csv
+-   CBR shared file of Dept. of Water Resources LAD run designation: lengthcriteriariver.csv renamed run_designation_cbr.csv
 -   USFWS shared file: RunDesignation.csv renamed run_designation_fws.csv
 -   EDI Data portal - RBDD : <https://portal.edirepository.org/nis/mapbrowse?scope=edi&identifier=1365&revision=1>
 -   SacPas LAD figures: <https://www.cbr.washington.edu/sacramento/data/delta_salvage.html>
@@ -27,9 +27,9 @@ To do:
 
 -   current function assigns run base on presence/absence of date and length. Catch.csv data has run designation for catch_id's with length data but no date. Find methods (likely in macros, possibly genetic or date based) to determine how this is designated.
 
--   Double check method is matching run assignment in catch.csv
+-   Double check method is matching run assignment in catch.csv (allow for genetic corrections) -- share results in easily digestable format
 
--   Compare CBR method to USFWS method
+-   Compare CBR method to USFWS method -- issue with first pass at converting CBR file causing differences in run assignments. Adjusted to include NA's in min/max thresholds and fit is much better. Still 3 mm/dd of different threshold splits that need confirmation - Use Johnson et al 1992 (favor later run) or stick with FWS completely.  
 
 Bill Poytress information via email exchange:
 
@@ -94,7 +94,7 @@ lad_cbr_long <- lad_cbr %>%
          MaxLength2 = E_.1, 
          mm = MONTH, 
          dd = DAY) %>% 
-  replace_na(list(MinLength1 = 0, MaxLength1 = 0, MinLength2 = 0, MaxLength2 = 0)) %>% 
+   # replace_na(list(MinLength1 = 0, MaxLength1 = 0, MinLength2 = 0, MaxLength2 = 0)) %>% Removed substitution of 0's for NA's. Keep NA's
    mutate(RunDesignation = recode( RunDesignation, 
          "LF" =  "late_fall",
          "F" = 'fall',
@@ -120,7 +120,7 @@ rm(lad_cbr)
 rm(lad_usfws_raw)
 ```
 
-Compare lad tables Note: min/max1 seems to be switched for minmax2 for some of cbr matrix. Code at the bottom of this chunk rearranges to match lad_fws organization. Based on this change, only 98 rows of mm/dd/run differ between the two tables.
+Compare lad tables Note: min/max1 seems to be switched for minmax2 for some of cbr matrix. Code at the bottom of this chunk rearranges to match lad_fws organization. Based on this change, only 98 rows of mm/dd/run differ between the two tables. - with introduction of NA's no longer an issue
 
 ```{r compare_LAD_designation_tables}
 
@@ -188,6 +188,20 @@ diff_rows <- combined_df %>%
   group_by(mm, dd, RunDesignation, MinLength1, MaxLength1, MinLength2, MaxLength2) %>%
   filter(n() == 1)
 
+diff_rows_plot <-diff_rows %>% 
+  pivot_longer(cols = c(4:7),
+               names_to = "threshold",
+               values_to = "length") %>% 
+    mutate(date = make_date(year = 2012, month = mm, day = dd),  # set a year
+         doy= yday(date))    # Extract the day of the year
+  # filter(threshold %in% c("MinLength1")) # "MinLength2" 
+  
+
+ggplot(diff_rows_plot, aes(x=doy, y = length )) +
+    geom_point( aes(color = dataset, shape = dataset)) +
+  scale_shape_manual(values = c(0,16)) 
+  
+
 ```
 
 Function to assign run designation based on lad table
@@ -224,7 +238,7 @@ fct_LAD_designation <- function(lad_data, catch_data){
         if (length(matches) == 0) {
           "no run designated"
         } else {
-          paste(matches, collapse = ", ")
+          paste(matches, collapse = ", ") #exclude when certain all matches return one run
         }
       }
     })
@@ -235,6 +249,12 @@ fct_LAD_designation <- function(lad_data, catch_data){
 #check designations
 df_catch_designation_fws <- fct_LAD_designation(lad_data = lad_fws, catch_data = df_catch)
 df_catch_designation_cbr <- fct_LAD_designation(lad_data = lad_cbr_updated, catch_data = df_catch)
+
+#using NA's-- extact run
+df_catch_designation_cbr_na <- fct_LAD_designation(lad_data = lad_cbr_long, catch_data = df_catch)
+
+df_catch_designation_cbr_na <- df_catch_designation_cbr_na %>%
+  mutate(run_designation_na = str_extract(run_designation, "\\b(?!NA\\b)[^,]+"))
 
 #save data
  # save(df_catch_designation_fws, file =here::here("JPI_convert_to_Rcode/data","catch_run_designation_fws.rda"), compress = "xz")
@@ -269,7 +289,7 @@ Comparing data it seems the designation in April for late-fall is the main discr
 # Join the data frames
 df_join <- df_catch_designation_fws %>%
   select(start_date, mm, dd, fork_length, run, run_designation_fws = run_designation) %>%
- cbind(run_designation_cbr = df_catch_designation_cbr$run_designation) %>% 
+ cbind(run_designation_cbr = df_catch_designation_cbr_na$run_designation_na) %>% 
     mutate(year = year(start_date),
          doy = yday(start_date)) 
 
@@ -290,6 +310,11 @@ df_different_runs_cbr.fws <- df_join %>%
     filter(!is.na(fork_length))
 ```
 
+Differing thresholds (with updated NA's in DWR/CBR method):
+2/4- CBR: 0-50, 51-69 , fws: 0-51, 52-69
+2/11- CBR: 54-72, 72-145; fws:54-72, 73-145
+2/16: CBR: 56-75, 76-150  fws: 56-74, 75-150
+
 ```{r plot_designations, fig.width=12}
 
 lad <- bind_rows(
@@ -297,18 +322,27 @@ lad <- bind_rows(
   lad_cbr_updated %>% mutate(dataset = "cbr")
 )
 
-lad_plot<-lad %>% 
+lad_plot<-combined_df %>% 
   pivot_longer(cols = c(4:7),
                names_to = "threshold",
                values_to = "length") %>% 
     mutate(date = make_date(year = 2012, month = mm, day = dd),  # set a year
-         doy= yday(date)) %>%   # Extract the day of the year
-  filter(threshold %in% c("MinLength1")) # "MinLength2" 
+         doy= yday(date))  #%>%   # Extract the day of the year
+  filter(threshold %in% c("MaxLength1")) # "MinLength2" 
 
 #cbr and fws - min1
 ggplot(lad_plot, aes(x = doy, y= length) ) +
-  geom_point( aes(color = interaction(RunDesignation,dataset), shape = dataset)) +
-  scale_shape_manual(values = c(0,16)) 
+  geom_point( aes(color = RunDesignation, shape = dataset)) +
+  scale_shape_manual(values = c(0,16)) +
+  labs(title = "Includes all min/max length thresholds")
+
+lad_plot %>% 
+  mutate(threshold = factor(threshold, levels = c("MinLength1", "MaxLength1", "MinLength2", "MaxLength2"))) %>% 
+ggplot( aes(x = doy, y= length) ) +
+  geom_point( aes(color = dataset, shape = dataset)) +
+  scale_shape_manual(values = c(0,16)) +
+  facet_wrap(~threshold) +
+    labs(title = "Facetted by individual thresholds per method of LAD designation")
 
 # cbr and fws different 
 diff_rows %>% 
